# nixos-needsreboot

./: Cargo.toml  README.md  flake.nix
.github/workflows/: determinate-ci.yml  flakehub-publish.yml  lock-updater.yml
src/: compare_nixos_modules.rs  main.rs
